syntax = "proto3";

option csharp_namespace = "DaprSample.MicroService.UsersService2.Proto";

import "messages/User.proto";

service Users {
    rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
}

message GetUserByIdRequest {
    uint64 id = 1;
}

message GetUserByIdResponse {
    User user = 1;
}